# asyncglk

./: .eslintrc.cjs  .eslintrc.yml  .gitignore  LICENSE  README.md  eslint.config.js  package.json  tsconfig.json
.github/workflows/: test.yml
docs/: dialog-localstorage.md  fonts.md  glkapi-differences-c-api.md
src/: TODO  asyncglk.mjs  const.mjs  gestalt.mjs  global.d.ts  index-browser.ts  index-common.ts  index-node.ts  index.mjs
src/asyncglk/: asyncglk.mjs  asyncglkproxy.mjs  memoryview.mjs
src/blorb/: blorb.ts  iff.ts  interface.ts
src/common/: constants.ts  file.ts  misc.ts  protocol.ts
src/common/file/: browser.ts  interface.ts
src/common/ui/: common.css
src/dialog/: dialog.mjs  dialognode.mjs  dialogterm.mjs
src/dialog/browser/: browser.ts  common.ts  download.ts  interface.ts  storage.ts
src/dialog/common/: cache.ts  common.ts  interface.ts
src/dialog/node/: async.ts  cheap.ts  node-streaming.ts
src/glk/: const.mjs  datetime.mjs  fref.mjs  glk.mjs  glkproxy.mjs  misc.mjs  stream.mjs  style.mjs  window.mjs
src/glkapi/: common.ts  constants.ts  filerefs.ts  glkapi.ts  interface.ts  lib_constants.ts  protocol.ts  streams.ts  windows.ts
src/glkaudio/: Cargo.toml  build.sh
src/glkaudio/pkg/: glkaudio.d.ts  glkaudio.js  glkaudio_bg.wasm.d.ts  package.json
src/glkaudio/src/: lib.rs
src/glkote/: asyncglkote.mjs  asyncglkoteterm.mjs  glkote.mjs  glkoteterm.mjs
src/glkote/web/: core.css  (+14 more)
tests/: graphwintest.gblorb.regtest  imagetest.gblorb.regtest  quixe.js  runtests.sh  zvm.js
tools/transcript-server/: README.md  transcript-server.php
(+12 files in other folders)
